# fillaripolleri

./: .dockerignore  .prettierrc  Cargo.toml  Dockerfile  helm-upgrade-release
client/: .dockerignore  Dockerfile  categories.json  index.html  package-lock.json  package.json  test.js
client/public/: main.scss  reboot.css
client/scripts/: deploy
client/src/: App.js  App.scss  Item.js  Item.scss  Items.js  Items.scss  Search.js  Search.scss  element.js  fetch-json.js  index.js  search-params.js  window.js
db-backup/: Dockerfile  deploy
deploy/: create-fillaripolleri-secret  process-topics-job.yaml
deploy/chart/: values.yaml
deploy/chart/templates/: client-deployment.yaml  db-backup-cronjob.yaml  ingress.yaml  scraper-cronjob.yaml  server-deployment.yaml
scraper/: Cargo.toml  Dockerfile  justfile  temp.sql
scraper/scripts/: db-copy-prod-to-local  db-dump  db-reset  db-restore  deploy
scraper/sql/: delete_topic.sql  delete_wtb_items.sql  tables.sql
scraper/sql/migrations/: 1.sql  2.sql
scraper/src/: config.rs  feed.rs  feed_urls.rs  html.rs  http.rs  item.rs  job.rs  lib.rs  main.rs  setup.rs  test.rs  topic.rs  types.rs
scraper/src/item/: db.rs  mod.rs
scraper/src/topic/: db.rs  mod.rs  page.rs
server/: .env  .eslintrc  .gitignore  Cargo.toml  Dockerfile  README.md  city-abbrevs.txt  main.js  nearley-test.js  package.json  test.txt  todo.org  try-grammar.js
server/data/: cities-abbreviations.json
server/grammar/: frame-size.js  frame-size.ne
server/lib/: async-route.js  camelize-column-names.js  config.js  db.js  item.js  logger.js  process-item.js  process-topics.js  query-stream.js  to-readable.js  topic.js
server/routes/: items.js
server/scripts/: db-backup-prod  db-psql-prod  deploy  process-topics.js  psql-prod  topic-snapshot-message.js  write-snapshot-data
server/sql/: categories.sql  latest_items.sql  latest_topics.sql  latest_topics_sold.sql  tables.sql  test.sql  topics.sql
server/src/: config.rs  item.rs  main.rs  setup.rs
server/test/: processing.js  setup.js  topic.test.js
server_old/: .dockerignore  .env  data.json  nginx.conf.sigil  package.json  todo.org
server_old/data/: cities.json
server_old/grammar/: frame-size.js  frame-size.ne
server_old/lib/: topic.js
server_old/scripts/: db-sync-local-to-prod  deploy  process-topics.js  run-goaccess
server_old/sql/: categories.sql  latest_topics.sql  topics.sql  upsert-item.sql
server_old/test/: topic.test.js
server_old/test/data/: 124176.html  124207.html  124237.html  124523.html  124548.html  124551.html  124590.html  126813.html  35611.html
