[package]
name = "fillaripolleri-scraper"
version = "0.1.0"
edition = "2021"
default-run = "fillaripolleri-scraper"

[[bin]]
name = "fillaripolleri-scraper"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.5.0"
color-eyre = "0.6.2"
eyre = "0.6.8"
tracing = "0.1.36"
tracing-subscriber =  { version = "0.3.15", features = ["env-filter"] }
feed-rs = "1.1.0"
regex = { version = "1.6.0", default-features = false, features = ["std", "unicode-perl"] }
lazy_static = "1.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.5.9"
serde_derive = "1.0.144"
select = "0.5.0"
thiserror = "1.0.35"
postgres-derive = "0.4.3"
postgres-types = "0.2.4"
html-escape = "0.2.11"
lazy-regex = "2.3.0"
pg_interval = "0.4.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
