[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fillaripolleri-scraper = { path = "../scraper" }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.36"
tracing-subscriber =  { version = "0.3.15", features = ["env-filter"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
axum = { version = "0.5.16", features = ["json"] }
deadpool-postgres = "0.10.2"
tokio-postgres = "0.7.7"
serde = "1.0.145"
serde_json = "1.0.86"
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }
